--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .pioenvs
 .piolibdeps
 .vscode/
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+lib/readme.txt
+.travis.yml
